--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,11 +21,42 @@
         <a class="mui-navigate-right" target="_blank" href="/main">
             <div class="mui-media-body">
                 1、获取页面
-                <p class='mui-ellipsis' style="margin-top:4px">这里写注释</p>
+                <!--<p class='mui-ellipsis' style="margin-top:4px">这里写注释</p>-->
             </div>
         </a>
     </li>
 </ul>
+
+<ul class="mui-table-view mui-table-view-chevron">
+    <li class="mui-table-view-cell mui-media">
+        <a class="mui-navigate-right" target="_blank" href="/getMap">
+            <div class="mui-media-body">
+                2、获取数据(接口)
+            </div>
+        </a>
+    </li>
+</ul>
+
+<ul class="mui-table-view mui-table-view-chevron" style="margin-top: 10px" >
+    <li class="mui-table-view-cell mui-media">
+        <a class="mui-navigate-right" target="_blank" href="/redis/getRedisInfo">
+            <div class="mui-media-body">
+                3、redis数据获取
+            </div>
+        </a>
+    </li>
+</ul>
+
+<ul class="mui-table-view mui-table-view-chevron" style="margin-top: 10px" >
+    <li class="mui-table-view-cell mui-media">
+        <a class="mui-navigate-right" target="_blank" href="/swagger-ui.html">
+            <div class="mui-media-body">
+                4、swagger接口页面
+            </div>
+        </a>
+    </li>
+</ul>
+
 
 
 </body>
