--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <li class="mui-table-view-cell mui-media">
         <a class="mui-navigate-right" target="_blank" href="/main">
             <div class="mui-media-body">
-                1、获取页面
+                获取页面
                 <!--<p class='mui-ellipsis' style="margin-top:4px">这里写注释</p>-->
             </div>
         </a>
@@ -31,7 +31,16 @@
     <li class="mui-table-view-cell mui-media">
         <a class="mui-navigate-right" target="_blank" href="/getMap">
             <div class="mui-media-body">
-                2、获取数据(接口)
+                获取数据(Map)
+            </div>
+        </a>
+    </li>
+</ul>
+<ul class="mui-table-view mui-table-view-chevron">
+    <li class="mui-table-view-cell mui-media">
+        <a class="mui-navigate-right" target="_blank" href="/getUser">
+            <div class="mui-media-body">
+                获取数据(接口)
             </div>
         </a>
     </li>
@@ -41,7 +50,7 @@
     <li class="mui-table-view-cell mui-media">
         <a class="mui-navigate-right" target="_blank" href="/redis/getRedisInfo">
             <div class="mui-media-body">
-                3、redis数据获取
+                redis数据获取
             </div>
         </a>
     </li>
@@ -51,7 +60,7 @@
     <li class="mui-table-view-cell mui-media">
         <a class="mui-navigate-right" target="_blank" href="/swagger-ui.html">
             <div class="mui-media-body">
-                4、swagger接口页面
+                swagger接口页面
             </div>
         </a>
     </li>
