--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 
 <ul class="mui-table-view mui-table-view-chevron">
     <li class="mui-table-view-cell mui-media">
-        <a class="mui-navigate-right" target="_blank" href="/getMap">
+        <a class="mui-navigate-right" target="_blank" href="/main/getMap">
             <div class="mui-media-body">
                 获取数据(Map)
             </div>
@@ -38,7 +38,7 @@
 </ul>
 <ul class="mui-table-view mui-table-view-chevron">
     <li class="mui-table-view-cell mui-media">
-        <a class="mui-navigate-right" target="_blank" href="/getUser">
+        <a class="mui-navigate-right" target="_blank" href="/user/getUser">
             <div class="mui-media-body">
                 获取数据(接口)
             </div>
